--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:28.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -72,7 +71,7 @@ dependencies {
     implementation 'com.github.cdflynn:checkview:v1.1'
     implementation 'com.google.android.play:core:1.8.0'
     implementation 'org.jsoup:jsoup:1.10.1'
-    
+
     //Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
@@ -95,6 +94,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation "com.google.firebase:firebase-core:17.5.0"
     implementation "com.google.android.gms:play-services-gcm:17.0.0"
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-database:19.4.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.firebase:firebase-messaging-directboot:20.2.4'
@@ -119,7 +119,6 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:3.1.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.orhanobut:dialogplus:1.11@aar'
-    implementation 'com.google.android.material:material:1.1.0-alpha01'
     implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
     //Expendable List
     implementation 'com.mindorks:placeholderview:0.7.1'
