--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/web_hi_res_512"
         android:supportsRtl="true"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Activity.subscription.SubscriptionActivity"></activity>
@@ -55,7 +57,7 @@
         <activity android:name=".Activity.ManageAccount.ManageProducts.EditCategoryActivity" />
         <activity android:name=".Activity.ManageAccount.ManageProducts.ProductCategoryList" />
         <activity android:name=".Activity.ProductDatails.DetailsActivity" />
-        <activity android:name=".SubCategoryActivity" />
+        <activity android:name=".SubCategoryActivity"/>
         <activity android:name=".Activity.Cooks.UpdateCookImage" />
         <activity android:name=".Activity.Cooks.AddCookImages" />
         <activity android:name=".Activity.Cooks.CookImagesList" />
